# loracue

./: -  .clang-format  .commitlintrc.json  .gitignore  .gitmodules  CMakeLists.txt  CODE_REVIEW_ELEGANCE_2025-01-29.md  CODE_REVIEW_ELEGANCE_2025-01-29_ROUND2.md  CODE_REVIEW_TODO_LIST.md  DETAILED_CODE_REVIEW.md  DISPLAY_REFACTOR_PLAN.md  GEMINI.md  GitVersion.yml  KNOWN_ISSUES.md  Kconfig.projbuild  Makefile  README.md  REFACTOR_CHECKLIST.md  REFACTOR_SUMMARY_ROUND2.md  UPGRADE_REPORT.md  changeplan.md  diagram.json  package-lock.json  package.json  partitions.csv  sdkconfig  sdkconfig.console-on-uart0  sdkconfig.debug  sdkconfig.defaults  sdkconfig.heltec_v3  sdkconfig.lilygo_t3  sdkconfig.lilygo_t5  sdkconfig.model_alpha  sdkconfig.model_alpha_plus  sdkconfig.model_beta  sdkconfig.model_gamma  sdkconfig.simulator  sdkconfig.uart-swap  sdkconfig.wokwi  wokwi.toml
.github/: dependabot.yml
.husky/: pre-commit
assets/: HeltecV3.psd  loracue-bootlogo.json  sprites.h
components/bluetooth_config/: CMakeLists.txt  ble_ota.c  ble_ota_handler.c  bluetooth_config.c  bluetooth_config_stub.c
components/bluetooth_config/include/: ble_ota.h  ble_ota_handler.h  bluetooth_config.h
components/bsp/: CMakeLists.txt  Kconfig  bsp_common.c  bsp_heltec_v3.c  bsp_i2c.c  bsp_lilygo_t3.c  bsp_lilygo_t5.c  bsp_oled.c  bsp_simulator.c  bsp_spi.c  bsp_wokwi.c
components/bsp/include/: bsp.h
components/display/: CMakeLists.txt  display.c  display_ssd1306.c  display_ssd1681.c
components/display/include/: display.h
components/firmware_manifest/: CMakeLists.txt  WEB_UI_INTEGRATION.md  firmware_manifest.c  linker.lf  ota_compatibility.c
components/firmware_manifest/include/: firmware_manifest.h  ota_compatibility.h
components/oled_ui/: CMakeLists.txt  oled_ui.c  pc_mode_screen.c  ui_data_provider.c  ui_data_update_task.c  ui_helpers.c  ui_monitor_task.c  ui_pairing_overlay.c  ui_pc_history_task.c  ui_screen_controller.c  ui_status_bar.c  ui_status_bar_task.c
components/oled_ui/icons/: ui_battery.c  ui_bluetooth.c  ui_rf.c  ui_status_icons.c  ui_usb.c
components/oled_ui/include/: bluetooth_screen.h  boot_screen.h  brightness_screen.h  config_mode_screen.h  device_mode_screen.h  device_registry_screen.h  factory_reset_screen.h  info_screens.h  lora_band_screen.h  lora_bw_screen.h  lora_cr_screen.h  lora_frequency_screen.h  lora_settings_screen.h  lora_sf_screen.h  lora_slot_screen.h  lora_txpower_screen.h  main_screen.h  menu_screen.h  oled_ui.h  ota_error_screen.h  pairing_screen.h  pc_main_screen.h  pc_mode_screen.h  presenter_main_screen.h  slot_screen.h  ui_config.h  ui_data_provider.h  ui_data_update_task.h  ui_helpers.h  ui_icons.h  ui_pairing_overlay.h  ui_pc_history_task.h  ui_screen_controller.h  ui_status_bar.h
components/oled_ui/include/icons/: ui_battery.h  ui_bluetooth.h  ui_rf.h  ui_status_icons.h  ui_usb.h
components/oled_ui/screens/: bluetooth_screen.c  boot_screen.c  brightness_screen.c  config_mode_screen.c  device_mode_screen.c  device_registry_screen.c  factory_reset_screen.c  info_screens.c  lora_band_screen.c  lora_bw_screen.c  lora_cr_screen.c  lora_frequency_screen.c  lora_settings_screen.c  lora_sf_screen.c  lora_slot_screen.c  lora_submenu_screen.c  lora_txpower_screen.c  main_screen.c  menu_screen.c  ota_error_screen.c  pairing_screen.c  pc_main_screen.c  pc_mode_screen.c  presenter_main_screen.c  slot_screen.c
components/ui_compact/: CMakeLists.txt  ui_compact.c  ui_compact_statusbar.c  ui_components.c  ui_navigator.c  ui_navigator.c.orig
components/ui_compact/include/: screens.h  ui_compact.h  ui_compact_fonts.h  ui_compact_statusbar.h  ui_components.h  ui_navigator.h  ui_screen_interface.h  ui_strings.h
components/ui_compact/screens/: screen_bluetooth.c  screen_boot.c  screen_brightness.c  screen_config_mode.c  screen_contrast.c  screen_device_mode.c  screen_device_registry.c  screen_factory_reset.c  screen_info.c  screen_lora_band.c  screen_lora_bw.c  screen_lora_cr.c  screen_lora_frequency.c  screen_lora_presets.c  screen_lora_regulatory_domain.c  screen_lora_regulatory_domain.h  screen_lora_settings.c  screen_lora_sf.c  screen_lora_submenu.c  screen_lora_txpower.c  screen_main.c  screen_menu.c  screen_pairing.c  screen_pc_mode.c  screen_slot.c  screen_stubs.c
components/ui_lvgl/: CMakeLists.txt  lv_port_disp.c  lv_port_indev.c  ui_lvgl.c
components/ui_lvgl/include/: lv_port_disp.h  lv_port_indev.h  screens.h  ui_lvgl.h  ui_lvgl_config.h  widgets.h
components/ui_lvgl/screens/: screen_boot.c  screen_main.c  screen_menu.c  screen_ota.c  screen_pairing.c  screen_settings.c
components/ui_lvgl/widgets/: widget_battery.c  widget_rssi.c  widget_statusbar.c
components/ui_rich/: CMakeLists.txt  generate_fonts.sh  ui_rich.c  ui_rich_impl.c
components/ui_rich/fonts/: .gitignore  README.md
components/ui_rich/images/: bootscreen.c  bootscreen.h
components/ui_rich/include/: ui_rich.h
components/ui_rich/screens/: home_screen.c  pc_mode_screen.c  presenter_screen.c  settings_screen.c
docs/: AI_CONTEXT.md  ARCHITECTURAL_IMPROVEMENTS_2025-01-29.md  BLE-CONFIG.md  BLE-OTA.md  BLE_NOT_DISCOVERABLE_DEBUG.md  BLE_OTA_PROTOCOL.md  BLE_PAIRING_UX.md  BLE_SECURITY_ANALYSIS.md  BLE_SECURITY_FIXES.md  BOARDS.md  BUILD_PROCESS.md  CODE_QUALITY.md  CODE_TEMPLATE.h  FIRMWARE_UPLOAD_SIMPLE.md  HELTEC_V3_pinout.md  IMPLEMENTATION.md  IMPLEMENTATION_ROADMAP.md  LILYGO_T3-EPAPER_pinout.md  LORACUE_MANAGER_BLE_OTA_PROMPT.md  LORACUE_MANAGER_USB_FIRMWARE_PROMPT.md  LORA_ARCHITECTURE.md  MANUAL_SETUP_STEPS.md  ONE_BUTTON_FOOTER_PROPOSAL.md  ONE_BUTTON_UI.md  OTA-SAFETY.md  OTA-implementation-summary.md  OTA-refactor-v2.md  OTA-refactor.md.bak  OTA-usage-guide.md  OTA_SECURITY.md  PROTOCOL_V2.md  RELEASE_WORKFLOW.md  RUST_BLE_OTA_QUICK_START.md  SECURITY_AUDIT_2025-01-29.md  SIMULATOR.md  SLOTS.md  USB_COMPOSITE.md  UX_ARCHITECTURE.md  WEB_UI_UPDATES.md  blueprint.md  (+1 more)
keys/: README.md
main/: CMakeLists.txt  Kconfig.projbuild  display_ui.c  display_ui.h  idf_component.yml  lora_driver.c  lora_driver.h  main.c
scripts/: generate_manifest.py  generate_readme.sh  (+2 more)
(+263 files in other folders)
