if(CONFIG_UI_RICH)
    idf_component_register(
        SRCS 
            "ui_rich.c"
            "screens/boot_screen.c"
            "screens/launcher_screen.c"
            "screens/app_presenter.c"
            "widgets/status_bar.c"
        INCLUDE_DIRS 
            "include"
        REQUIRES 
            lvgl
            bsp
            power_mgmt
    )
else()
    # OLED UI build - provide empty component
    idf_component_register()
endif()
